# cs430

./: main.py  pyproject.toml  search.ipynb
lab-1/: agent.ipynb  reflections.md
lab-2/: reflections.md
lab-3/: greedy.py  ollamatron.py  pyproject.toml  tron_base.py
lab-4/: lab_ch6_results.md  sudoku.ipynb
nlp-lab/: lab_nlp_results.md  nlp.ipynb
