[project]
name = "cs430"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertviz>=1.4.1",
    "captum>=0.7.0",
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "ollama>=0.6.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.11",
    "z3>=0.2.0",
    "z3-solver>=4.15.8.0",
]
